Fixed scrollbar on text-output area on project page to fit window. Minor code format changes

--- a/pppio_dev/css/editor.css
+++ b/pppio_dev/css/editor.css
@@ -134,9 +134,3 @@ overflow: auto;
 	border: 1px solid #000;
 	/*height: 70%;*/
 }
-
-.textOutput
-{
-  overflow:scroll;
-	height: 100%;
-}
